@@ -1,16 +1,24 @@
 DIST shared-mime-info-0.19.tar.gz 595168 RMD160 edb36ea4c23f608749cb9e8bfa747297a10afed1 SHA1 c589906365c591d67b4d7280b0a52297b4bb7dcc SHA256 4aae542285cdf011d8486ece8c2c8b0431ce1e25e7eb7efd39593f04bc76d118
+DIST shared-mime-info-0.20.tar.bz2 429405 RMD160 74fb58dcf9a6b7a651a0708a81b5f37b9e5eb617 SHA1 5918a9bb72da72fea63a480d07eb1c1150b14c3a SHA256 6febe616fb850f4319efa7017312abb796024e7ac20da37c4d2ce34afa41776c
 EBUILD shared-mime-info-0.19.ebuild 1087 RMD160 75ab99ceaa9e489d343b41b39e044e11ad0d40ed SHA1 2ea0d4b11b3377ddebbc6a1ea55b3f211e959c9b SHA256 30854ad9e38e107d50d80509489b6af8e01b8529b1385728fc4aa6b27627be2a
 MD5 3ac35619b506b183cecfa4c8cfd1536b shared-mime-info-0.19.ebuild 1087
 RMD160 75ab99ceaa9e489d343b41b39e044e11ad0d40ed shared-mime-info-0.19.ebuild 1087
 SHA256 30854ad9e38e107d50d80509489b6af8e01b8529b1385728fc4aa6b27627be2a shared-mime-info-0.19.ebuild 1087
-MISC ChangeLog 9508 RMD160 fcecd490284ba4e29cdbfdb517a35b88cfc14f42 SHA1 1cebad839cb9c2e1d609ad8498df5050541007d0 SHA256 f8c76eddda519269228035a014f6359cba87efc189569229a46ec1faeb02446b
-MD5 aa9c9c0c46dc7360beef8b20f4fb36a6 ChangeLog 9508
-RMD160 fcecd490284ba4e29cdbfdb517a35b88cfc14f42 ChangeLog 9508
-SHA256 f8c76eddda519269228035a014f6359cba87efc189569229a46ec1faeb02446b ChangeLog 9508
-MISC metadata.xml 250 RMD160 6a1670e034a6b50f55ddd7840ac863f70f3e4180 SHA1 697376b17aa0428906128e8cb7fc6960d96362b2 SHA256 0d3086585ef210c5488d0496aed33a1b30d4d652e68be25566c5c5ced7797b27
-MD5 b93af9a9fc7d706533a75b1fcef6b648 metadata.xml 250
-RMD160 6a1670e034a6b50f55ddd7840ac863f70f3e4180 metadata.xml 250
-SHA256 0d3086585ef210c5488d0496aed33a1b30d4d652e68be25566c5c5ced7797b27 metadata.xml 250
+EBUILD shared-mime-info-0.20.ebuild 1015 RMD160 340975ac519421d73a758cb95ff0de5fc16e6a71 SHA1 f2f3b5ec267f148cafedd0e10bca7810deb9541f SHA256 206a0ce21d9eeb9a24f37e68b965e72e38b31df2be5f6206c7b9c15af45f5ccf
+MD5 418b87c5810fe65f87ebf05c4190a38d shared-mime-info-0.20.ebuild 1015
+RMD160 340975ac519421d73a758cb95ff0de5fc16e6a71 shared-mime-info-0.20.ebuild 1015
+SHA256 206a0ce21d9eeb9a24f37e68b965e72e38b31df2be5f6206c7b9c15af45f5ccf shared-mime-info-0.20.ebuild 1015
+MISC ChangeLog 9795 RMD160 845403ee26126301bb5f1f5541e407c7d9e7dfbf SHA1 d551e2d9a9ea746bf61c55fb5c284235786c927a SHA256 e6973324f56905b118d237910007af5fd1473919fc9c2dbbd5876fb14453d40b
+MD5 3e21f8c896b7aadfb7c5e92517d34adf ChangeLog 9795
+RMD160 845403ee26126301bb5f1f5541e407c7d9e7dfbf ChangeLog 9795
+SHA256 e6973324f56905b118d237910007af5fd1473919fc9c2dbbd5876fb14453d40b ChangeLog 9795
+MISC metadata.xml 341 RMD160 6ab4ff527218a2fd72f789ad7ace8f81cc9de159 SHA1 4f95cd3dada7055dc899f3c7f11f9116b48e6bd1 SHA256 ab944beddb00debc2762e9c23ac7f7d73e9150c6432f39ccb090c6338d09cf4d
+MD5 3d0ed6b5244bf88d38e38ee0e808c0f6 metadata.xml 341
+RMD160 6ab4ff527218a2fd72f789ad7ace8f81cc9de159 metadata.xml 341
+SHA256 ab944beddb00debc2762e9c23ac7f7d73e9150c6432f39ccb090c6338d09cf4d metadata.xml 341
 MD5 33b246534d95f9456e8df2f1a990d18c files/digest-shared-mime-info-0.19 265
 RMD160 e1cab2d274b2da090a7fd194bf82ae3cf8ed92d1 files/digest-shared-mime-info-0.19 265
 SHA256 46aa5603ea8f150abf85733b340782008b2e1d18f024d302d84c9475342c9265 files/digest-shared-mime-info-0.19 265
+MD5 9c9560a46b4254af1c3c076a13949e52 files/digest-shared-mime-info-0.20 268
+RMD160 a663a0215ec6fd37bc9b2a939dffcac4926313c8 files/digest-shared-mime-info-0.20 268
+SHA256 8d7a5bc9038240a85f52529757ba9c9c96414078c2eb59bc2775a0f9fca5023d files/digest-shared-mime-info-0.20 268
